home/interview/coding_assignments/taskset_coding_assignments_interview/task_008_k8s_nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: "testingress.com"
      http:
        paths:
          - pathType: Prefix
            path: "/check.txt"
            backend:
              service:
                name: nginx-dep-svc-nodeport
                port:
                  number: 8080
